# ctrlx-automation-sdk

./: .gitignore  install_deps.sh
samples-cpp/datalayer.ecat.io/: ctrlx_datalayer_helper.h  main.cpp
samples-cpp/vtem.monitor/: CMakeLists.txt  build-snap-amd64.sh  main.cpp
samples-cpp/vtem.monitor/snap/: snapcraft.yaml
scripts/environment/scripts/: install-cpp-aarch64-libs.sh
